// Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
// Use of this source code is governed by a MIT style
// license that can be found in the LICENSE file. The original repo for
// this file is https://github.com/onexstack/onex.
//

syntax = "proto3";

package cacheserver.v1; // 告诉编译器此文件使用什么版本的语法

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/onexstack/onex/pkg/api/cacheserver/v1;v1";

message SetSecretRequest {
  string key = 1;
  string name = 2 [(validate.rules).string = {min_len: 1, max_len: 253}];
  optional google.protobuf.Duration expire = 3;
  string description = 4 [(validate.rules).string.max_len = 256];
}

message DelSecretRequest {
  string key = 1;
}

message GetSecretRequest {
  string key = 1;
}

message GetSecretResponse{
  string userID = 1;
  string name = 2;
  string secretID= 3;
  string secretKey= 4;
  int64 expires = 5;
  int32 status= 6;
  string description = 7;
  google.protobuf.Timestamp createdAt = 8;
  google.protobuf.Timestamp updatedAt = 9;
}
